force-app/main/default/objects/reCAPTCHA_Settings__c/reCAPTCHA_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores Google reCAPTCHA API keys for form spam protection. Configure at the organization level.</description>
    <label>reCAPTCHA Settings</label>
</CustomObject>