force-app/main/default/objects/reCAPTCHA_Settings__c/fields/Captcha_Type__c.field-meta.xml
<CustomField>
    <fullName>Captcha_Type__c</fullName>
    <description>The type of reCAPTCHA to use. Valid values: V2_Checkbox (shows "I'm not a robot" checkbox), V2_Invisible (triggers on submit with possible challenge), V3_Score (runs in background with score-based verification).</description>
    <inlineHelpText>Enter the reCAPTCHA type: V2_Checkbox, V2_Invisible, or V3_Score</inlineHelpText>
    <label>Captcha Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>