force-app/main/default/objects/reCAPTCHA_Settings__c/fields/Default_Site_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Default_Site_Base_Url__c</fullName>
    <description>Cached base URL for the default Site (e.g., https://acme.my.site.com/support). Set during Setup Wizard to avoid re-querying Site/SiteDetail on every page load.</description>
    <inlineHelpText>The base URL of the default Site used for public form URLs.</inlineHelpText>
    <label>Default Site Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>