force-app/main/default/objects/reCAPTCHA_Settings__c/fields/Default_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Site_Id__c</fullName>
    <description>Default Salesforce Site ID for generating public form URLs. Set during Setup Wizard when selecting a Site.</description>
    <inlineHelpText>The ID of the default Site used for public form URLs.</inlineHelpText>
    <label>Default Site Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>