force-app/main/default/objects/reCAPTCHA_Settings__c/fields/Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Score_Threshold__c</fullName>
    <defaultValue>0.3</defaultValue>
    <description>The minimum score threshold for reCAPTCHA v3 verification. Scores range from 0.0 (likely bot) to 1.0 (likely human). Google recommends starting with 0.3 and adjusting based on your traffic patterns.</description>
    <inlineHelpText>Minimum score (0.0-1.0) required to pass v3 verification. Lower values are more permissive. Default is 0.3.</inlineHelpText>
    <label>Score Threshold</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>