force-app/main/default/objects/reCAPTCHA_Settings__c/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <description>The private Secret Key from Google reCAPTCHA admin console. This key is used server-side to verify reCAPTCHA tokens.</description>
    <inlineHelpText>Enter the Secret Key from your Google reCAPTCHA v2 admin console. Keep this confidential.</inlineHelpText>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>