force-app/main/default/objects/reCAPTCHA_Settings__c/fields/Site_Key__c.field-meta.xml
<CustomField>
    <fullName>Site_Key__c</fullName>
    <description>The public Site Key from Google reCAPTCHA admin console. This key is used client-side to render the reCAPTCHA widget.</description>
    <inlineHelpText>Enter the Site Key from your Google reCAPTCHA v2 admin console.</inlineHelpText>
    <label>Site Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>